--- a/posts/vercel.json
+++ b/posts/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/posts/:slug*",
-      "destination": "/posts/post.html"
+      "destination": "/posts/posts.html"
     }
   ]
 }
